error handling for incorrect uploads

--- a/angular.json
+++ b/angular.json
@@ -110,5 +110,8 @@
       }
     }
   },
-  "defaultProject": "ImageOverlap"
+  "defaultProject": "ImageOverlap",
+  "cli": {
+    "analytics": false
+  }
 }
